# EnvDriftGuard-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
envguard/: __init__.py  __main__.py  cli.py  tui.py
envguard/core/: __init__.py  detector.py  git_diff.py  parser.py  reporter.py
envguard/rules/: __init__.py  default_rules.py
envguard/utils/: __init__.py  colors.py  fs.py
tests/: __init__.py  test_detector.py  test_parser.py  test_reporter.py
